manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: looking-glass
 namespace: nixlabs
spec:
 ports:
   - name: web
     port: 80
     targetPort: web
 selector:
   app: looking-glass
